fix(backend): harden security across auth, billing and uploads
- Enforce JWT_SECRET min 32 chars at startup (env.ts)
- Hash refresh tokens with SHA-256 before storing in DB
- Add logout endpoint to invalidate refresh tokens
- Add webhook rate limiting (100 req/min)
- Trim CORS origins and Bearer token whitespace
- Check subscription expiry + canceled status in requireCredits
- Reject unknown file extensions instead of falling back to .webm
- Sanitize Deepgram and billing error messages sent to clients
- Refund credits if transcript save fails after deduction
- Sanitize OAuth payload (trim + length limit)
- Add auth.loggedOut and billing.cancelFailed i18n keys (12 locales)

--- a/packages/backend/src/i18n/locales/de.json
+++ b/packages/backend/src/i18n/locales/de.json
@@ -4,6 +4,7 @@
   "auth.tokenRefreshed": "Token aktualisiert",
   "auth.invalidRefreshToken": "Ungültiges Aktualisierungstoken",
   "auth.missingRefreshToken": "Fehlendes oder ungültiges Aktualisierungstoken",
+  "auth.loggedOut": "Erfolgreich abgemeldet",
 
   "user.notFound": "Benutzer nicht gefunden",
   "user.fetched": "Benutzer abgerufen",
@@ -30,6 +31,7 @@
   "billing.checkoutCreated": "Checkout erstellt",
   "billing.paddleConfig": "Paddle-Konfiguration",
   "billing.cancelSuccess": "Abonnement wird am Ende des Zeitraums gekündigt",
+  "billing.cancelFailed": "Abonnement konnte nicht gekündigt werden",
   "billing.planRequired": "Aktiver Plan erforderlich. Bitte abonnieren Sie einen Plan.",
   "billing.insufficientCredits": "Unzureichendes Guthaben. Bitte upgraden Sie Ihren Plan.",
 
