--- a/packages/backend/src/i18n/locales/ko.json
+++ b/packages/backend/src/i18n/locales/ko.json
@@ -4,6 +4,7 @@
   "auth.tokenRefreshed": "토큰이 갱신되었습니다",
   "auth.invalidRefreshToken": "유효하지 않은 갱신 토큰",
   "auth.missingRefreshToken": "갱신 토큰이 없거나 유효하지 않습니다",
+  "auth.loggedOut": "로그아웃되었습니다",
 
   "user.notFound": "사용자를 찾을 수 없습니다",
   "user.fetched": "사용자를 가져왔습니다",
@@ -30,6 +31,7 @@
   "billing.checkoutCreated": "결제가 생성되었습니다",
   "billing.paddleConfig": "Paddle 설정",
   "billing.cancelSuccess": "구독이 기간 종료 시 취소됩니다",
+  "billing.cancelFailed": "구독 취소에 실패했습니다",
   "billing.planRequired": "활성 플랜이 필요합니다. 플랜을 구독하세요.",
   "billing.insufficientCredits": "크레딧이 부족합니다. 플랜을 업그레이드하세요.",
 
