--- a/packages/app/src/i18n/locales/es.json
+++ b/packages/app/src/i18n/locales/es.json
@@ -62,7 +62,7 @@
   "overlay.cancel": "Cancelar grabación",
   "overlay.cancelBtn": "Cancelar",
   "splash.checking": "Buscando actualizaciones...",
-  "splash.retrying": "Buscando actualizaciones... Reintentando en {{seconds}}s",
+  "splash.retrying": "Reintentando en {{seconds}}s",
   "update.available": "Actualización v{{version}} disponible",
   "update.button": "Actualizar",
   "update.downloading": "Descargando actualización... {{percent}}%",
