--- a/packages/app/src/i18n/locales/pt.json
+++ b/packages/app/src/i18n/locales/pt.json
@@ -62,7 +62,7 @@
   "overlay.cancel": "Cancelar gravação",
   "overlay.cancelBtn": "Cancelar",
   "splash.checking": "Verificando atualizações...",
-  "splash.retrying": "Verificando atualizações... Tentando novamente em {{seconds}}s",
+  "splash.retrying": "Tentando novamente em {{seconds}}s",
   "update.available": "Atualização v{{version}} disponível",
   "update.button": "Atualizar",
   "update.downloading": "Baixando atualização... {{percent}}%",
