feat(app): animate splash messages and use gradual retry

--- a/packages/app/src/i18n/locales/de.json
+++ b/packages/app/src/i18n/locales/de.json
@@ -61,6 +61,7 @@
   "overlay.stop": "Stoppen und transkribieren",
   "overlay.cancel": "Aufnahme abbrechen",
   "overlay.cancelBtn": "Abbrechen",
+  "splash.connecting": "Verbindung zum Server wird hergestellt...",
   "splash.checking": "Suche nach Updates...",
   "splash.retrying": "Erneuter Versuch in {{seconds}}s",
   "update.available": "Update v{{version}} verfügbar",
