--- a/packages/app/src/i18n/locales/zh.json
+++ b/packages/app/src/i18n/locales/zh.json
@@ -61,6 +61,7 @@
   "overlay.stop": "停止并转录",
   "overlay.cancel": "取消录音",
   "overlay.cancelBtn": "取消",
+  "splash.connecting": "正在连接服务器...",
   "splash.checking": "正在检查更新...",
   "splash.retrying": "{{seconds}}秒后重试",
   "update.available": "更新 v{{version}} 可用",
