feat(billing): resume canceled subscription instead of creating new one
- Handle cancelScheduled state: resume same plan or resume + upgrade
- Send scheduledChange: null to Paddle API to undo cancellation
- Frontend handles resumed response with refreshUser and toast
- Use i18n keys instead of hardcoded toast messages
- HTTP logs now console-only (not sent to Axiom)

--- a/packages/app/src/i18n/locales/de.json
+++ b/packages/app/src/i18n/locales/de.json
@@ -96,6 +96,8 @@
   "billing.upgrade": "Upgrade",
   "billing.opening": "Wird geöffnet...",
   "billing.cancelSubscription": "Abo kündigen",
+  "billing.resumed": "Abo fortgesetzt",
+  "billing.upgraded": "Plan aktualisiert",
   "billing.cancelling": "Wird gekündigt...",
   "billing.current": "Aktuell: {{plan}}",
   "billing.freeTrial": "3 Tage kostenlos testen",
