--- a/packages/app/src/i18n/locales/en.json
+++ b/packages/app/src/i18n/locales/en.json
@@ -96,6 +96,8 @@
   "billing.upgrade": "Upgrade",
   "billing.opening": "Opening...",
   "billing.cancelSubscription": "Cancel Subscription",
+  "billing.resumed": "Subscription resumed",
+  "billing.upgraded": "Plan upgraded",
   "billing.cancelling": "Cancelling...",
   "billing.current": "Current: {{plan}}",
   "billing.freeTrial": "3-day free trial",
