launch promo: 1 ay ücretsiz MAX plan + countdown banner
- yeni kullanıcılara plan:max, credits:3, 30 gün süre
- billing route'ları ve sidebar geçici olarak devre dışı
- website'e countdown'lu promo banner eklendi (8 Mart UTC)
- CORS ve CSP ayarları deployment için güncellendi

--- a/packages/web/src/i18n/locales/de.json
+++ b/packages/web/src/i18n/locales/de.json
@@ -1,4 +1,7 @@
 {
+  "banner": {
+    "promo": "🎉 Jetzt herunterladen — 1 Monat MAX-Plan kostenlos ($3 Guthaben inklusive)!"
+  },
   "navbar": {
     "features": "Funktionen",
     "pricing": "Preise",
