--- a/packages/web/src/i18n/locales/en.json
+++ b/packages/web/src/i18n/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "banner": {
+    "promo": "🎉 Download now — 1 month MAX plan free ($3 credit included)!"
+  },
   "navbar": {
     "features": "Features",
     "pricing": "Pricing",
