--- a/packages/web/src/i18n/locales/es.json
+++ b/packages/web/src/i18n/locales/es.json
@@ -1,4 +1,7 @@
 {
+  "banner": {
+    "promo": "🎉 Descarga ahora — 1 mes de plan MAX gratis (crédito de $3 incluido)!"
+  },
   "navbar": {
     "features": "Funciones",
     "pricing": "Precios",
