--- a/packages/web/src/i18n/locales/fr.json
+++ b/packages/web/src/i18n/locales/fr.json
@@ -1,4 +1,7 @@
 {
+  "banner": {
+    "promo": "🎉 Téléchargez maintenant — 1 mois de plan MAX offert (crédit de 3$ inclus) !"
+  },
   "navbar": {
     "features": "Fonctionnalités",
     "pricing": "Tarifs",
