--- a/packages/web/src/i18n/locales/hi.json
+++ b/packages/web/src/i18n/locales/hi.json
@@ -1,4 +1,7 @@
 {
+  "banner": {
+    "promo": "🎉 अभी डाउनलोड करें — 1 महीने का MAX प्लान मुफ़्त ($3 क्रेडिट शामिल)!"
+  },
   "navbar": {
     "features": "सुविधाएँ",
     "pricing": "मूल्य",
