--- a/packages/web/src/i18n/locales/it.json
+++ b/packages/web/src/i18n/locales/it.json
@@ -1,4 +1,7 @@
 {
+  "banner": {
+    "promo": "🎉 Scarica ora — 1 mese di piano MAX gratis (credito di $3 incluso)!"
+  },
   "navbar": {
     "features": "Funzionalità",
     "pricing": "Prezzi",
