--- a/packages/web/src/i18n/locales/ja.json
+++ b/packages/web/src/i18n/locales/ja.json
@@ -1,4 +1,7 @@
 {
+  "banner": {
+    "promo": "🎉 今すぐダウンロード — MAXプラン1ヶ月無料（$3クレジット付き）！"
+  },
   "navbar": {
     "features": "機能",
     "pricing": "料金",
