--- a/packages/web/src/i18n/locales/ko.json
+++ b/packages/web/src/i18n/locales/ko.json
@@ -1,4 +1,7 @@
 {
+  "banner": {
+    "promo": "🎉 지금 다운로드 — MAX 플랜 1개월 무료 ($3 크레딧 포함)!"
+  },
   "navbar": {
     "features": "기능",
     "pricing": "요금",
