--- a/packages/web/src/i18n/locales/pt.json
+++ b/packages/web/src/i18n/locales/pt.json
@@ -1,4 +1,7 @@
 {
+  "banner": {
+    "promo": "🎉 Baixe agora — 1 mês de plano MAX grátis (crédito de $3 incluído)!"
+  },
   "navbar": {
     "features": "Recursos",
     "pricing": "Preços",
