--- a/packages/web/src/i18n/locales/ru.json
+++ b/packages/web/src/i18n/locales/ru.json
@@ -1,4 +1,7 @@
 {
+  "banner": {
+    "promo": "🎉 Скачайте сейчас — 1 месяц плана MAX бесплатно (кредит $3 включён)!"
+  },
   "navbar": {
     "features": "Функции",
     "pricing": "Цены",
