--- a/packages/web/src/i18n/locales/tr.json
+++ b/packages/web/src/i18n/locales/tr.json
@@ -1,4 +1,7 @@
 {
+  "banner": {
+    "promo": "🎉 Hemen indir — 1 ay MAX plan ücretsiz ($3 kredi dahil)!"
+  },
   "navbar": {
     "features": "Özellikler",
     "pricing": "Fiyatlar",
